--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,13 @@ button{
         padding: 5px 10px;
 }
 
+h1{
+        position: absolute;
+        text-decoration: underline;
+        font-size:70px;
+        font-weight:600;
+        top:50vh;
+        left: 50vh;
+        transform: translate(-50%,-50%);
+        color: #fff;
+}
